# Huffman

./: CMakeLists.txt  README.md  haffman.sh  main.cpp  testHaff.sh
Data/: a.haf  aaaaaa-decode.haf  aaaaaa.haf  aaaaaa1-decode.haf  aaaaaa1.haf  aaaaaa2.haf  ababab-decode.haf  ababab1-decode.haf  ababab1.haf  ababab2.haf  abrakadabra.haf  abrakadabra.txt  generate.py  orwell-decode.txt  orwell.haf  war-and-peace.haf
lib/: CMakeLists.txt  ReadWriter.cpp  ReadWriter.h  Tree.cpp  Tree.h  bitSeq.cpp  bitSeq.h  cmake_install.cmake  haffman.cpp  haffman.h
